# Configuration

./: .bash_profile  .vimrc  .vimrc-win10  .zshrc  CMakeLists.txt  HDF5_CMakeLists.txt  Makefile  Monokai.icls  README.md  airline-molokai-Mac.vim  cpuinfo-linux.sh  cpuinfo-mac.sh  jupyter-notebook-cluster.sh  molokai.vim  myagnoster.zsh-theme  run.ljrs  tasks.json  vimrc-win10
Email-Notification/: README.md  mail.sh  run.sh  test.cpp
UltiSnips/: cpp.snippets  cu.snippets  plaintex.snippets  python.snippets  tex.snippets
